@@ -1,3 +1,7 @@
+2011-02-08  Roland McGrath  <roland@redhat.com>
+
+	* ldgeneric.c (check_for_duplicate2): Remove unused variable.
+
 2011-01-06  Roland McGrath  <roland@redhat.com>
 
 	* strip.c (handle_elf): Under --strip-sections, remove all
